Adding Consumer and Producer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
+
+spring.kafka.producer.bootstrap-servers=localhost:29092
+spring.kafka.consumer.bootstrap-servers=localhost:29092
