--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgresbank
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
+spring.jackson.default-property-inclusion = NON_NULL
+
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
