--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,10 @@ spring.datasource.continue-on-error=true
 
 spring.kafka.producer.bootstrap-servers=localhost:29092
 spring.kafka.consumer.bootstrap-servers=localhost:29092
+
+# Specify the path of the OpenAPI documentation
+springdoc.api-docs.path=/api-docs
+# Specify the path of the Swagger UI
+springdoc.swagger-ui.path=/swagger-ui.html
+# Enable or disable Swagger UI
+springdoc.swagger-ui.enabled=true
