Adding integrated tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.h2.console.enabled=false
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgresbank
 spring.datasource.username=postgres
@@ -18,9 +18,6 @@ spring.datasource.continue-on-error=true
 spring.kafka.producer.bootstrap-servers=localhost:29092
 spring.kafka.consumer.bootstrap-servers=localhost:29092
 
-# Specify the path of the OpenAPI documentation
 springdoc.api-docs.path=/api-docs
-# Specify the path of the Swagger UI
 springdoc.swagger-ui.path=/swagger-ui.html
-# Enable or disable Swagger UI
 springdoc.swagger-ui.enabled=true
