--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,15 @@
-spring.h2.console.enabled=false
+################### JPA / DATASOURCE #####################################
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgresbank
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:localhost}:5432/postgresbank
 spring.datasource.username=postgres
 spring.datasource.password=admin
-
+#################### JACKSON ##############################################
 spring.jackson.default-property-inclusion = NON_NULL
-
-spring.datasource.initialization-mode=always
-spring.datasource.initialize=true
-spring.datasource.schema=classpath:/schema.sql
-spring.datasource.continue-on-error=true
-
-spring.kafka.producer.bootstrap-servers=localhost:29092
-spring.kafka.consumer.bootstrap-servers=localhost:29092
-
+#################### KAFKA ##############################################
+spring.kafka.bootstrap-servers=${KAFKA_CONNECTION:localhost:9092}
+#################### SWAGGER ##############################################
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
