--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,34 @@
 version: '3.8'
 services:
   web:
+    container_name: bank-service
     build: .
+    networks:
+      - broker-kafka
+    environment:
+      DATABASE_HOST: db
+      KAFKA_CONNECTION: kafka:29092
     ports:
-      - "8080:8080"
+      - '8080:8080'
+    depends_on:
+      - "db"
+      - "kafka"
+
   db:
     image: postgres:14.1-alpine
     restart: always
-    container_name: postgres_bank_service
+    container_name: db
+    networks:
+      - broker-kafka
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: postgresbank
     ports:
       - '5432:5432'
+
   zookeeper:
+    container_name: zookeeper
     image: confluentinc/cp-zookeeper:latest
     networks:
       - broker-kafka
@@ -39,13 +53,14 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
   kafdrop:
+    container_name: kafdrop
     image: obsidiandynamics/kafdrop:latest
     networks:
       - broker-kafka
     depends_on:
       - kafka
     ports:
-      - "19000:9000"
+      - '19000:9000'
     environment:
       KAFKA_BROKERCONNECT: kafka:29092
 
