Adding Get Transactions by query params

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ################### JPA / DATASOURCE #####################################
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:localhost}:5432/postgresbank
 spring.datasource.username=postgres
 spring.datasource.password=admin
